Revision history for Perl extension IPC::Shareable.

1.07 UNREL
    -

1.06    2021-09-08
    - Fix significant bug where at least on MacOS, if we generated a CRC of a
      key that was greater than 0x80000000, it would round down the key to that
      number exactly, casuing duplicates, and incorrect segment access
    - Added new() method, returns a reference (default hash) without having to
      do the tie() directly
    - Fix issue in JSON decoder where an empty JSON string may have caused
      decode failure
    - Modify t/65-seg_size.t beyond RAM max test to cover varying error messages
      on differing OSs
    - Renamed t/67-out_of_memory.t as the tests are related to exhausting SHM
      slots, not RAM

1.05    2021-07-16
    - Bump prereq version of Test::SharedFork to 0.35
    - Added ability to use JSON as the serializer
    - Added ipcs()
    - Added test to ensure we croak if data size is greater than segment size
    - Added 'tidy' attribute, removes unneeded nested structure segments
    - In SharedMem, added _key attribute, and added set/get methods
    - Changed key generation from using padding, pack and unpack to using
      String::CRC32's crc32(), which allows arbitrary, unpadded strings
    - Added attributes() allows fetching one, or all of the object's atttributes
    - Added 'limit' attribute, by setting false, allows a user to set a segment
      size larger than our internal 1GB default
    - Cleaned up exception throwing (particularly if seg size eats up all
      memory, we throw an appropriate message)
    - Display proper exception if we try to exhaust all available shared memory
      segments (fixes #3)

1.04    2021-06-28
    - Skip unspawn tests for perls with -Duselongdouble, as Storable is not
      compatible storing/retrieving such numbers (closes #5)

1.03    2021-06-25
    - Add newline to singleton() warn so that it doesn't print out trace info

1.02    2021-06-25
    - Remove erroneous listing from MANIFEST