@@ -1,7 +1,9 @@
 Revision history for Perl extension IPC::Shareable.
 
 1.07 UNREL
-    -
+    - When running in forked environments, _shm_key_rand() was consistently
+      returning the same 'random' key to each forked process. We've fixed this
+      issue, and added tests for it (added a call to srand())
 
 1.06    2021-09-08
     - Fix significant bug where at least on MacOS, if we generated a CRC of a
